アバター、エサ、外枠、内壁追加

--- a/ap0901.html
+++ b/ap0901.html
@@ -6,16 +6,21 @@
 		</title>
 		<style>
 		  body { margin: 0; background-color: #23a3a3; color: gold}
-
+		  #status { font-size: x-large; color: yellow;}
 		</style>
 	</head>
 	<body>
-		<div id="output">G38400-2023 拓殖 太郎</div>
+		<div><table id="status">
+			<td>Score: </td>
+			<td id="score">00000000</td>
+			<td id="life">○○○</td></table>
+		<div id="output">G38484-2023  堀部 楓真</div></div>
 		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+		<div id="WebGL-output"></div>
 		<script type="importmap"> {
 			"imports" : {
 				"three" : "https://cdn.jsdelivr.net/npm/three@0.169.0/build/three.module.js",
-				"three/addons" : "https://cdn.jsdelivr.net/npm/three@0.169.0/examples/jsm/Addons.js",
+				"three/addons" : "https://cdn.jsdelivr.net/npm/three@0.169.0/examples/jsm/",
 				"ili-gui": "https://cdn.jsdelivr.net/npm/lil-gui@0.19/+esm"
 			}
 		} </script>
